[package]
name = "storage"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL storage engine: heap pages, B-tree, buffer management"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
bytemuck.workspace = true
thiserror.workspace = true
static_assertions.workspace = true
bitflags.workspace = true

[dev-dependencies]
rand = "0.8"
